--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ env:
 
 install:
   - pip install --use-mirrors $DJANGO_SPEC
-  - pip install django-discover-runner
+  - pip install django-discover-runner Sphinx
   - python setup.py install
 
 script:
   - django-admin.py test --settings=rebar.test_settings rebar
+  - cd docs; make doctest
