--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
 
 env:
+  - DJANGO_SPEC=Django==1.4.8
   - DJANGO_SPEC=Django==1.5.4
   - DJANGO_SPEC=https://www.djangoproject.com/download/1.6b4/tarball/\#egg\=Django
 
