--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 
 install:
   - pip install --use-mirrors $DJANGO_SPEC
-  - pip install django-discover-runner Sphinx
+  - pip install django-discover-runner Sphinx mock
   - python setup.py install
 
 script:
