--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ commands=
 [testenv:py27-dj14]
 basepython=python2.7
 deps=
+  mock
   django-discover-runner
   Sphinx
   Django==1.4.8
@@ -22,6 +23,7 @@ deps=
 [testenv:py27-dj15]
 basepython=python2.7
 deps=
+  mock
   django-discover-runner
   Sphinx
   Django==1.5.4
@@ -29,6 +31,7 @@ deps=
 [testenv:py27-dj16]
 basepython=python2.7
 deps=
+  mock
   django-discover-runner
   Sphinx
   https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
