Test locally against both Python 2.6 and 2.7.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 #    py27-dj14,
 envlist =
+    py26-dj15,
+    py26-dj16,
     py27-dj15,
     py27-dj16
 
@@ -30,6 +32,31 @@ deps=
 
 [testenv:py27-dj16]
 basepython=python2.7
+deps=
+  mock
+  django-discover-runner
+  Sphinx
+  https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
+
+
+[testenv:py26-dj14]
+basepython=python2.6
+deps=
+  mock
+  django-discover-runner
+  Sphinx
+  Django==1.4.8
+
+[testenv:py26-dj15]
+basepython=python2.6
+deps=
+  mock
+  django-discover-runner
+  Sphinx
+  Django==1.5.4
+
+[testenv:py26-dj16]
+basepython=python2.6
 deps=
   mock
   django-discover-runner
