Run tests using python setup.py test.

--- a/tox.ini
+++ b/tox.ini
@@ -8,33 +8,26 @@ envlist =
 
 [testenv]
 deps=
-  django-discover-runner
   Sphinx
 commands=
-  django-admin.py test --settings=rebar.test_settings rebar
+  python setup.py test
   sphinx-build -E -W -b doctest docs build
 
 [testenv:py27-dj14]
 basepython=python2.7
 deps=
-  mock
-  django-discover-runner
   Sphinx
   Django==1.4.8
 
 [testenv:py27-dj15]
 basepython=python2.7
 deps=
-  mock
-  django-discover-runner
   Sphinx
   Django==1.5.4
 
 [testenv:py27-dj16]
 basepython=python2.7
 deps=
-  mock
-  django-discover-runner
   Sphinx
   https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
 
@@ -42,23 +35,17 @@ deps=
 [testenv:py26-dj14]
 basepython=python2.6
 deps=
-  mock
-  django-discover-runner
   Sphinx
   Django==1.4.8
 
 [testenv:py26-dj15]
 basepython=python2.6
 deps=
-  mock
-  django-discover-runner
   Sphinx
   Django==1.5.4
 
 [testenv:py26-dj16]
 basepython=python2.6
 deps=
-  mock
-  django-discover-runner
   Sphinx
   https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
