--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ env:
 
 install:
   - pip install --use-mirrors $DJANGO_SPEC
-  - pip install django-discover-runner Sphinx mock
+  - pip install Sphinx
   - python setup.py install
 
 script:
-  - django-admin.py test --settings=rebar.test_settings rebar
+  - python setup.py test
   - cd docs; make doctest
