--- a/tox.ini
+++ b/tox.ini
@@ -10,24 +10,27 @@ envlist =
 deps=
   Sphinx
 commands=
-  python setup.py test
+  coverage run --source=rebar setup.py test
   sphinx-build -E -W -b doctest docs build
 
 [testenv:py27-dj14]
 basepython=python2.7
 deps=
+  coverage
   Sphinx
   Django==1.4.8
 
 [testenv:py27-dj15]
 basepython=python2.7
 deps=
+  coverage
   Sphinx
   Django==1.5.4
 
 [testenv:py27-dj16]
 basepython=python2.7
 deps=
+  coverage
   Sphinx
   https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
 
@@ -35,17 +38,20 @@ deps=
 [testenv:py26-dj14]
 basepython=python2.6
 deps=
+  coverage
   Sphinx
   Django==1.4.8
 
 [testenv:py26-dj15]
 basepython=python2.6
 deps=
+  coverage
   Sphinx
   Django==1.5.4
 
 [testenv:py26-dj16]
 basepython=python2.6
 deps=
+  coverage
   Sphinx
   https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
