--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - python setup.py install
 
 script:
-  - python setup.py test
+  - coverage run --source=rebar setup.py test
   - cd docs; make doctest
 
 after_success:
