Use sphinx-build for running doctests like we do with tox.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 
 script:
   - coverage run --source=rebar setup.py test
-  - cd docs; make doctest
+  - sphinx-build -E -W -b doctest docs build
 
 after_success:
   - coveralls
