--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,14 @@ python:
   - "2.7"
 
 env:
-#   - DJANGO_SPEC=Django==1.4.8
   - DJANGO_SPEC=Django==1.5.4
-  - DJANGO_SPEC=https://www.djangoproject.com/download/1.6b4/tarball/\#egg\=Django
+  - DJANGO_SPEC=Django==1.6
+  - DJANGO_SPEC=https://github.com/django/django/zipball/master\#egg\Django
+
+matrix:
+  exclude:
+    - python: "2.6"
+      env: DJANGO_SPEC=https://github.com/django/django/zipball/master\#egg\Django
 
 install:
   - pip install coveralls --use-mirrors
