--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ envlist =
     py26-dj15,
     py26-dj16,
     py27-dj15,
-    py27-dj16
+    py27-dj16,
+    py27-dj-master,
 
 [testenv]
 deps=
@@ -32,7 +33,14 @@ basepython=python2.7
 deps=
   coverage
   Sphinx
-  https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
+  Django==1.6
+
+[testenv:py27-dj-master]
+basepython=python2.7
+deps=
+  coverage
+  Sphinx
+  git+https://github.com/django/django.git#egg=Django
 
 
 [testenv:py26-dj14]
@@ -54,4 +62,4 @@ basepython=python2.6
 deps=
   coverage
   Sphinx
-  https://www.djangoproject.com/download/1.6b4/tarball/#egg=Django
+  Django==1.6
