Adding Python 3.3 to the automated test suites.

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,9 @@ envlist =
     py27-dj15,
     py27-dj16,
     py27-dj-master,
+    py33-dj15,
+    py33-dj16,
+    py33-dj-master
 
 [testenv]
 deps=
@@ -13,6 +16,27 @@ deps=
 commands=
   coverage run --source=rebar setup.py test
   sphinx-build -E -W -b doctest docs build
+
+[testenv:py33-dj15]
+basepython=python3.3
+deps=
+  coverage
+  Sphinx
+  Django==1.5.5
+
+[testenv:py33-dj16]
+basepython=python3.3
+deps=
+  coverage
+  Sphinx
+  Django==1.6.2
+
+[testenv:py33-dj-master]
+basepython=python3.3
+deps=
+  coverage
+  Sphinx
+  git+https://github.com/django/django.git#egg=Django
 
 [testenv:py27-dj14]
 basepython=python2.7
