Simply the Tox configuration using generated env.

--- a/tox.ini
+++ b/tox.ini
@@ -1,88 +1,19 @@
 [tox]
-#    py27-dj14,
-envlist =
-    py26-dj15,
-    py26-dj16,
-    py27-dj15,
-    py27-dj16,
-    py27-dj-master,
-    py33-dj15,
-    py33-dj16,
-    py33-dj-master
+envlist = {py27,py34}-django{15,16,17,18,head}
 
 [testenv]
-deps=
-  Sphinx
+basepython =
+    py27: python2.7
+    py34: python3.4
+
+deps =
+    coverage
+    Sphinx
+    django15: Django~=1.5
+    django16: Django~=1.6
+    django17: Django~=1.7
+    django18: Django~=1.8
+    djangohead: git+https://github.com/django/django.git
+
 commands=
   coverage run --source=rebar setup.py test
-
-[testenv:py33-dj15]
-basepython=python3.3
-deps=
-  coverage
-  Sphinx
-  Django==1.5.5
-
-[testenv:py33-dj16]
-basepython=python3.3
-deps=
-  coverage
-  Sphinx
-  Django==1.6.2
-
-[testenv:py33-dj-master]
-basepython=python3.3
-deps=
-  coverage
-  Sphinx
-  git+https://github.com/django/django.git#egg=Django
-
-[testenv:py27-dj14]
-basepython=python2.7
-deps=
-  coverage
-  Sphinx
-  Django==1.4.10
-
-[testenv:py27-dj15]
-basepython=python2.7
-deps=
-  coverage
-  Sphinx
-  Django==1.5.5
-
-[testenv:py27-dj16]
-basepython=python2.7
-deps=
-  coverage
-  Sphinx
-  Django==1.6.2
-
-[testenv:py27-dj-master]
-basepython=python2.7
-deps=
-  coverage
-  Sphinx
-  git+https://github.com/django/django.git#egg=Django
-
-
-[testenv:py26-dj14]
-basepython=python2.6
-deps=
-  coverage
-  Sphinx
-  Django==1.4.10
-
-[testenv:py26-dj15]
-basepython=python2.6
-deps=
-  coverage
-  Sphinx
-  Django==1.5.5
-
-[testenv:py26-dj16]
-basepython=python2.6
-deps=
-  coverage
-  Sphinx
-  Django==1.6.2
