--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.3"
+  - "3.4"
 
 env:
-  - DJANGO_SPEC=Django==1.5.5
-  - DJANGO_SPEC=Django==1.6.2
+  - DJANGO_SPEC=Django=~1.5
+  - DJANGO_SPEC=Django~=1.6
+  - DJANGO_SPEC=Django~=1.7
+  - DJANGO_SPEC=Django~=1.8
   - DJANGO_SPEC=https://github.com/django/django/zipball/master\#egg\Django
-
-matrix:
-  exclude:
-    - python: "2.6"
-      env: DJANGO_SPEC=https://github.com/django/django/zipball/master\#egg\Django
 
 install:
   - pip install coveralls --use-mirrors
