--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ env:
   - DJANGO_SPEC=git+https://github.com/django/django.git
 
 install:
-  - pip install coveralls --use-mirrors
-  - pip install --use-mirrors $DJANGO_SPEC
+  - pip install coveralls
+  - pip install $DJANGO_SPEC
   - python setup.py install
 
 script:
